--- a/CeazarCode.csproj
+++ b/CeazarCode.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="CeazarCode.cs" />
     <Compile Include="CharUA.cs" />
+    <Compile Include="HelperData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -76,6 +77,10 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Text.txt" />
+    <Content Include="TextResult.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
