--- a/CeazarCode.csproj
+++ b/CeazarCode.csproj
@@ -62,6 +62,7 @@
     <Compile Include="HelperData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextAnalysis.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
