--- a/CeazarCode.csproj
+++ b/CeazarCode.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CeazarCode.cs" />
     <Compile Include="CharUA.cs" />
     <Compile Include="HelperData.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextAnalysis.cs" />
