--- a/CeazarCode.csproj
+++ b/CeazarCode.csproj
@@ -58,12 +58,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CeazarCode.cs" />
-    <Compile Include="CharUA.cs" />
-    <Compile Include="HelperData.cs" />
+    <Compile Include="UA_Alphabet.cs" />
+    <Compile Include="DataHelper.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextAnalysis.cs" />
+    <Compile Include="TextAnalyser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
